# handling-module

./: .ccsproject  .cproject  .project  README.md  main.c
.launches/: handling-module.launch
Debug/: blink.d  ccsObjs.opt  handling-module.map  handling-module.out  handling-module_linkInfo.xml  makefile  subdir_rules.mk  subdir_vars.mk
handling-module-MSP430G2452/: .cproject  .project  README.md  lnk_msp430g2452.cmd  main.c
handling-module-MSP430G2452/.launches/: handling-module-MSP430G2452.launch
handling-module-MSP430G2452/Debug/: handling-module-MSP430G2452.map  handling-module-MSP430G2452.out  handling-module-MSP430G2452_linkInfo.xml  makefile  subdir_rules.mk
handling-module-MSP430G2553/: .cproject  .project  main.c
handling-module-MSP430G2553/.launches/: handling-module-MSP430G2553.launch
handling-module-MSP430G2553/Debug/: handling-module-MSP430G2553.map  handling-module-MSP430G2553.out  handling-module-MSP430G2553_linkInfo.xml  main.d
handling-module-ODROID/: .gitignore  CMakeLists.txt  README.md  gripper-module.cpp  main.cpp  mainTest.cpp  serialTest.cpp
handling-module-ODROID/libs/AIO/: CMakeLists.txt  CommunicationChannel.cpp  CommunicationEvents.cpp  Module.cpp  ModuleInfo.cpp  Services.cpp
handling-module-ODROID/libs/HandlingModule/: CloseService.cpp  HandlingModule.cpp  HandlingModuleInfo.cpp  OpenService.cpp  ToggleService.cpp  main.cpp
