#SET (BOOST_ROOT "./boost_1_58_0")
#SET (BOOST_INCLUDEDIR "./boost_1_58_0")
#SET (BOOST_LIBRARYDIR "./boost_1_58_0/lib")
#SET (Boost_INCLUDE_DIRS "./boost_1_58_0")
cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
#include(${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeLists.txt)
include(${CMAKE_CURRENT_SOURCE_DIR}/libs/CMakeLists.txt)
add_executable(gripper_module main.cpp)
set_property(TARGET gripper_module PROPERTY CXX_STANDARD 11)
set_property(TARGET gripper_module PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries(gripper_module sioclient)
target_link_libraries(gripper_module pthread )
message(STATUS ${Boost_INCLUDE_DIRS} )
#target_include_directories(gripper_module PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../src" ${Boost_INCLUDE_DIRS} )
