#SET (BOOST_ROOT "./boost_1_58_0")
#SET (BOOST_INCLUDEDIR "./boost_1_58_0")
#SET (BOOST_LIBRARYDIR "./boost_1_58_0/lib")
#SET (Boost_INCLUDE_DIRS "./boost_1_58_0")
cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
include(${CMAKE_CURRENT_SOURCE_DIR}/libs/socket.io/CMakeLists.txt)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/socket.io/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/AIO)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libs/HandlingModule)

add_executable(handling_module main.cpp)
set_property(TARGET handling_module PROPERTY CXX_STANDARD 11)
set_property(TARGET handling_module PROPERTY CXX_STANDARD_REQUIRED ON)
target_link_libraries(handling_module sioclient )
target_link_libraries(handling_module /usr/local/lib/libwiringPi.so )
target_link_libraries(handling_module /usr/local/lib/libwiringPiDev.so )
target_link_libraries(handling_module pthread )
message(STATUS ${Boost_INCLUDE_DIRS} )

#target_include_directories(mobility_module PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../src" ${Boost_INCLUDE_DIRS} )
